# Python_Prototype_MQT

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
binder/: environment.yml
circuits/: GHZ_state.qasm  Quantum_Fourier_Transform.qasm  Quantum_teleportation.qasm  grover.qasm  w_state.qasm
notebooks/: dd_playground.ipynb
src/dd_playground/: __init__.py  comparison.py  instrumentation.py  reference_comparison.py  simulator.py  utils.py
src/dd_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
